--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,11 @@ matplotlib==3.10.3
 numpy==2.3.1
 packaging==25.0
 pillow==11.2.1
+PyAudio==0.2.14
 pycparser==2.22
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 scipy==1.16.0
 six==1.17.0
 sounddevice==0.5.2
+soundfile==0.13.1
